--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,23 +19,13 @@ jobs:
 
       - name: Create clasprc.json
         env:
-          CLASP_SETTING_BASE64: ${{ secrets.CLASP_SETTING }}
+          CLASP_SETTING: ${{ secrets.CLASP_SETTING }}
         run: |
           mkdir -p ~/.clasp
-          python3 -c "import base64, os; data = os.environ['CLASP_SETTING_BASE64'].replace('\n', '').replace(' ', '').strip(); open(os.path.expanduser('~/.clasprc.json'), 'wb').write(base64.b64decode(data))"
-          echo "Verifying .clasprc.json structure..."
-          node -e "
-            try {
-              const c = JSON.parse(require('fs').readFileSync(require('path').join(require('os').homedir(), '.clasprc.json'), 'utf8'));
-              console.log('JSON structure is valid.');
-              if (c.tokens) console.log('Authentication tokens successfully loaded.');
-            } catch (e) {
-              console.error('FAILED to parse .clasprc.json. The current Base64 secret is still invalid.');
-              process.exit(1);
-            }
-          "
+          # Decode the Base64 secret into the home directory
+          echo "$CLASP_SETTING" | base64 --decode > ~/.clasprc.json
 
       - name: Deploy to GAS
         run: |
-          echo "Starting deployment to Google Apps Script..."
+          echo "Starting deployment..."
           npx @google/clasp push --force
