--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,11 +64,11 @@ jobs:
           const info = {
             version: process.env.RUN_NUM,
             commit: process.env.COMMIT_SHA.substring(0, 7),
-            deployedAt: new Date().toISOString(),
+            deployedAt: new Date().toLocaleString('ko-KR', {timeZone: 'Asia/Seoul'}),
             branch: process.env.BRANCH
           };
           const content = '/**\n * === 배포 정보 (자동 업데이트) ===\n * GAS에서 이 파일을 열면 마지막 배포 시간을 확인할 수 있습니다.\n */\nvar DEPLOY_INFO = ' + JSON.stringify(info, null, 2) + ';\n';
-          fs.writeFileSync('_DeployInfo.js', content);
+          fs.writeFileSync('!DeployInfo.js', content);
           console.log('Deploy info updated:', JSON.stringify(info));
           "
 
